--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
+    "next-i18next": "^11.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.3",
