--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
+    "country-flag-icons": "^1.4.26",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
