--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "0.2.1",
     "chart.js": "2.9.4",
     "country-flag-icons": "^1.4.26",
+    "firebase": "^9.8.1",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
