--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-i18next": "^11.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-onclickoutside": "^6.12.1",
     "react-scripts": "4.0.3",
     "tailwindcss": "2.0.4"
   },
