--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@popperjs/core": "2.9.1",
     "@tailwindcss/forms": "0.2.1",
+    "axios": "^0.27.2",
     "chart.js": "2.9.4",
     "country-flag-icons": "^1.4.26",
     "firebase": "^9.8.1",
