add flowbite plugin

--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "chart.js": "2.9.4",
     "country-flag-icons": "^1.4.26",
     "firebase": "^9.8.1",
+    "flowbite": "^1.4.7",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
     "next-i18next": "^11.0.0",
     "react": "17.0.1",
+    "react-cookie": "^4.1.1",
     "react-dom": "17.0.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "4.0.3",
