--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "17.0.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "4.0.3",
+    "react-slideshow-image": "^3.7.5",
     "tailwindcss": "2.0.4"
   },
   "scripts": {
