--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "typescript": "4.2.3"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "autoprefixer": "10.2.5",
     "postcss": "8.2.8"
   }
