add tailwind watch mode

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "build": "next build",
     "dev": "next dev",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
-    "build:tailwind": "tailwind build styles/index.css -o styles/tailwind.css"
+    "build:tailwind": "TAILWIND_MODE=watch tailwind build styles/index.css -o styles/tailwind.css --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
