--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@material-tailwind/react": "^1.2.3",
     "@mui/material": "^5.8.2",
     "@popperjs/core": "2.9.1",
     "axios": "^0.27.2",
@@ -25,10 +26,12 @@
     "next-i18next": "^11.0.0",
     "react": "17.0.1",
     "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.1",
     "react-onclickoutside": "^6.12.1",
     "react-scripts": "4.0.3",
-    "react-slideshow-image": "^3.7.5"
+    "react-slideshow-image": "^3.7.5",
+    "swr": "^1.3.0"
   },
   "scripts": {
     "start": "next start",
