--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-append-prepend": "1.0.8",
     "next": "10.0.9",
     "next-i18next": "^11.0.0",
+    "postcss-cli": "^10.0.0",
     "react": "17.0.1",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
@@ -38,7 +39,7 @@
     "build": "next build",
     "dev": "next dev",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run build:tailwind && npm run dev",
-    "build:tailwind": "TAILWIND_MODE=watch tailwind build styles/index.css -o styles/tailwind.css --watch"
+    "build:tailwind": " tailwind build styles/index.css -o styles/tailwind.css --watch"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -64,7 +65,7 @@
     "@tailwindcss/line-clamp": "^0.4.0",
     "@tailwindcss/typography": "^0.5.4",
     "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "tailwindcss": "^3.1.6"
   }
 }
