--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-device-detect": "^2.2.2",
     "react-dom": "17.0.1",
     "react-onclickoutside": "^6.12.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "4.0.3",
     "react-slideshow-image": "^3.7.5",
     "swr": "^1.3.0"
