--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "flowbite": "^1.4.7",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
-    "next": "10.0.9",
+    "next": "^12.3.1",
     "next-i18next": "^11.0.0",
     "postcss-cli": "^10.0.0",
-    "react": "17.0.1",
+    "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-device-detect": "^2.2.2",
-    "react-dom": "17.0.1",
+    "react-dom": "^18.2.0",
     "react-onclickoutside": "^6.12.2",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "4.0.3",
