--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "AtelierDS - Citroen ds website",
   "repository": "https://github.com/adelinger/atelierds",
   "license": "MIT",
+  "engines": {
+    "node": ">=16.x"
+  },
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -22,7 +25,7 @@
     "flowbite": "^1.5.3",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
-    "next": "^12.3.1",
+    "next": "^13.5.6",
     "next-i18next": "^12.1.0",
     "postcss-cli": "^10.0.0",
     "react": "^18.2.0",
